Resize grid to be full-height, and other tweaks.

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 
     <script src="SlickGrid/lib/jquery-1.7.min.js"></script>
     <script src="SlickGrid/lib/jquery.event.drag-2.0.min.js"></script>
+    <script src="SlickGrid/lib/jquery-ui-1.8.16.custom.min.js"></script>
     <script src="SlickGrid/slick.core.js"></script>
     <script src="SlickGrid/slick.grid.js"></script>
     <script src="CSVToArray.js"></script>
