--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,15 @@
 <body>
     <form id="input-form">
         <label>URL: <input type="text" placeholder="URL" class="url"/></label>
-        <label style="display:none">Upload: <input type="file" class="file"/></label>
         <label>CSV: <textarea placeholder="comma-separated values" wrap="off" class="csv"></textarea></label>
         <input type="submit" value="Render"/>
     </form>
 
     <div id="grid"></div>
+
+    <div id="mask">
+        <div class="message"></div>
+    </div>
 
     <script src="SlickGrid/lib/jquery-1.7.min.js"></script>
     <script src="SlickGrid/lib/jquery.event.drag-2.0.min.js"></script>
